<resources>
    <string name="app_name">menu</string>
    <string name="menu1">menu1</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="search">search</string>
    <string name="add_menu">ADD MENU</string>
    <string name="navigate_to_menu_1">Navigate to Menu 1</string>
    <string name="navigate_to_menu_2">Navigate to Menu 2</string>
    <string name="navigate_to_contextual_menus">Navigate to Contextual Menus</string>
    <string name="button_contextual_menu">Button Contextual Menu</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="select_all">select all</string>
    <string name="long_click_here">Long Click here</string>
    <string name="navigate_to_contextual_action_menu">Navigate to contextual Action Menu</string>
    <string name="more">more</string>
    <string name="select_text_color">Select Text Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="select_text_size">Select Text Size</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="bold_text">Bold Text</string>
    <string name="normal_text">Normal Text</string>
    <string name="text_style">Text Style</string>
</resources>